# pjano

./: README.md  pyproject.toml  run.py
pjano/: intervals.py  keys.py  scales.py  symbols.py
pjano/lib/: chords.py  scales.py
pjano/old/: interp.py  keys.py  notes.py  notes2.py  scales.py
pjano/old/pjanoo/: scales.py
pjano/old/simple/: chords.py  notes.py  scales.py
pjanoo/lib/: pitch.py
