[tool.poetry]
name = "pjano"
version = "0.1.0"
description = "Piano & Jazz"
authors = ["alkasm <alex@theory.shop>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mingus = "^0.6.1"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
